--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1"
   },
